--- a/FXExperienceTools/src/main/resources/styles/main.css
+++ b/FXExperienceTools/src/main/resources/styles/main.css
@@ -22,9 +22,11 @@ different terms and without source code for the larger work.
     -fx-focus-color: #339797;
 }
 .nav-box {
-   -fx-background-image: url("../images/darkleather.png");
+/*   -fx-background-image: url("../images/binding_dark.png");*/
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
-    -fx-background-color: transparent;
+    -fx-background-color:  -fe-dark-inner-background;
+    -fx-background-insets: 1, -5, 1, -5;
+    -fx-background-radius: 9;
   
 
 }
@@ -138,23 +140,37 @@ different terms and without source code for the larger work.
 }
 .menu-toggle-button {
     -fx-font-weight: bold;
-    -fx-background-color: -fe-dark-inner-background;
+    -fx-background-color: transparent;
     /*-fx-border-color: -fe-light-border;*/
-    /*    -fx-background-color:
-            linear-gradient(#99ccff, #99ccff),
-            radial-gradient(center 50% -40%, radius 200%, #b8eeff 45%, #80c8ff 50%);*/
-    -fx-background-insets: -0.2, 1, 2;
-    -fx-background-radius: 3.2, 2, 2;
-    -fx-border-radius: 2.2, 2, 2;
+     -fx-background-insets: 2, -3, 2, -3;
+    -fx-background-radius: 6;
+     -fx-border-width: 0 4 0 0;
     /*-fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );*/
 }
 .menu-toggle-button:selected {
     -fx-font-weight: bold;
-    -fx-background-color: derive(-fe-dark-body-background, 32%);
+    -fx-background-color:
+            linear-gradient(-fe-light-border, -fe-light-border),
+            radial-gradient(center 50% -40%, radius 200%, #747574 45%, #4C4F53 50%);
+/*     -fx-background-color:
+            linear-gradient(#99ccff, #99ccff),
+            radial-gradient(center 50% -40%, radius 200%, #b8eeff 45%, #80c8ff 50%);*/
+/*    -fx-background-color: #4C4F53;*/
+   -fx-background-insets: 2, -3, 2, -3;
+    -fx-background-radius: 6;
+    -fx-border-color: #1C82E8;
+    -fx-border-width: 0 4 0 0;   
+
+}
+.menu-toggle-button:hover {
+    -fx-font-weight: bold;
+/*   -fx-background-color: derive(-fe-dark-body-background, 32%);*/
     /*    -fx-background-color: #0011114D;*/
-    -fx-background-insets: -0.2, 1, 2;
-    -fx-background-radius: 3.2, 2, 2;
-    -fx-border-radius: 2.2, 2, 2;
+     -fx-background-insets: 2, -3, 2, -3;
+    -fx-background-radius: 6;
+    -fx-border-color: -fe-light-border;
+    -fx-border-width: 0 4 0 0;
+    
 
 }
 
